--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Rotate String</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body>
-  Hello world
+<body onload="anime('target')">
+  <pre id='target' >siddhesh</pre>
+  
+  
   <script src="script.js"></script>
 </body>
 
